--- a/src/app/components/navegacion/navegacion.component.html
+++ b/src/app/components/navegacion/navegacion.component.html
@@ -1,21 +1,19 @@
-<nav class="navbar-container">
-  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
-    <a href="#" class="navbar-logo">
-      <img src="assets/LogoClaro.png" class="h-60" alt="Logo" />
-      <span class="self-center">TutoriasMaster YJM</span>
+<nav id="barra" class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img id="logo" src="assets/LogoClaro.png" class="h-8" alt="Flowbite Logo" />
+        <span id="titulooo" class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">TutoriasMaster YJM</span>
     </a>
-  </div>
-</nav>
-
-<nav class="navbar-menu">
-  <div class="max-w-screen-xl px-4 py-3 mx-auto">
-    <div class="flex items-center">
-      <ul class="navbar-menu-list">
+    <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
+      <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
         <li>
           <a routerLink="home" class="navbar-link" aria-current="page">Home</a>
-        </li>
-        <li>
-          <a routerLink="suscripcion" class="navbar-link">Suscripcion</a>
         </li>
         <li>
           <a routerLink="nosotros" class="navbar-link">Nosotros</a>
@@ -23,16 +21,17 @@
         <li>
           <a routerLink="contactos" class="navbar-link">Contactos</a>
         </li>
-        <li>
-          <a routerLink="servicio" class="navbar-link">Servicios</a>
-        </li>
+    
+        <div class="ml-auto flex justify-end w-full sm:w-auto">
+          @if (!autentication()) {
+            <a routerLink="login"
+              class="navbar-link">
+              Login
+            </a>
+          }
+        </div>
       </ul>
     </div>
   </div>
 </nav>
-
 <router-outlet></router-outlet>
-
-  
-
-  
