--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -17,7 +17,7 @@
     text-align: center;
     padding-top: 24px;
     padding-bottom: 56px;
-    color: #FFFFFF;
+    color: #0b0b0b;
   }
   
   
@@ -37,19 +37,8 @@
   }
   
   
-  .title {
-    margin-bottom: 16px;
-    font-size: 2.25rem;
-    font-weight: 800;
-    color: #FFFFFF;
-  }
-  
-  .description {
-    margin-bottom: 32px;
-    font-size: 1.125rem;
-    color: #DDEAF5;
-  }
-  
+
+
   .buttons {
     display: flex;
     flex-direction: column;
@@ -223,4 +212,80 @@
     background-color: #374151;
     color: white;
   }
-  
+/* Estilos adicionales */
+
+
+
+.services {
+  text-align: center;
+  padding: 50px 0;
+}
+
+.services h2 {
+  font-size: 2.5em;
+  margin-bottom: 30px;
+}
+
+.service-container {
+  display: flex;
+  justify-content: space-around;
+
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.service-card {
+  width: 250px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(105, 45, 45, 0.1);
+  transition: transform 0.3s ease-in-out;
+  text-align: center;
+  padding: 20px;
+  background-color: #61a5e1; /* Color de fondo, puede cambiarse */
+}
+
+
+.service-card:hover {
+  transform: translateY(-10px);
+}
+
+.service-image {
+  width: 100%;
+  height: 190px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.service-card h3 {
+  font-size: 1.5em;
+  margin: 15px 0;
+}
+
+.service-card p {
+  font-size: 1em;
+  color: #555;
+}
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  margin-top: 40px;
+}
+
+footer .social-links {
+  margin-top: 20px;
+}
+
+footer .social-links a {
+  color: #fff;
+  margin: 0 15px;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+footer .social-links a:hover {
+  color: #4CAF50;
+}
